syntax = "proto3";

package mutation_service;

service MutationService {
  rpc Mutate(MutateRequest) returns (MutateResponse) {}
}

message MutateRequest {
  string harness_id = 1;
  bytes input = 2;
}

message MutateResponse {
  repeated bytes new_inputs = 1;
  int32 exit_code = 2;
}
